add_executable(RtspProxy main.cpp)
if(WIN32)
include_directories("${3RD_DIRECTORY}/osal/inc")
target_link_libraries(RtspProxy common RTSPClient RTSPServer RTMPServer Codec ffmpeg Operators)
else()
include_directories("${CMAKE_SYSROOT}/usr/include/rockchip")
target_link_libraries(RtspProxy common RTSPClient RTSPServer RTMPServer Codec Operators avcodec avformat avutil swscale avdevice rockchip_mpp)
endif()