file(GLOB SOURCES *.cpp)
file(GLOB HEADERS *.h)

add_executable(RtspProxy ${SOURCES} ${HEADERS})
if(WIN32)
include_directories("${3RD_DIRECTORY}/osal/inc")
target_link_libraries(RtspProxy common RTSPClient RTSPServer RTMPServer Codec ffmpeg Operators WebsocketServer)
else()
include_directories("${CMAKE_SYSROOT}/usr/include/rockchip")
target_link_libraries(RtspProxy common RTSPClient RTSPServer RTMPServer Codec Operators avcodec avformat avutil swscale avdevice rockchip_mpp WebsocketServer)
endif()