if(WIN32)
include_directories("${3RD_DIRECTORY}/live555/include/")
else()
#基于sysroot的路径
include_directories("${CMAKE_SYSROOT}/usr/include/groupsock")
include_directories("${CMAKE_SYSROOT}/usr/include/liveMedia")
include_directories("${CMAKE_SYSROOT}/usr/include/UsageEnvironment")
include_directories("${CMAKE_SYSROOT}/usr/include/BasicUsageEnvironment")
endif()

add_executable(RTSPServerTest main.cpp)
if(WIN32)
target_link_libraries(RTSPServerTest live555)
else()
target_link_libraries(RTSPServerTest BasicUsageEnvironment liveMedia groupsock UsageEnvironment)
endif()