if(WIN32)
add_library(avcodec UNKNOWN IMPORTED GLOBAL)
set_target_properties(avcodec PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/lib/avcodec.lib"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/lib/avcodec.lib"
)

add_library(avdevice UNKNOWN IMPORTED GLOBAL)
set_target_properties(avdevice PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/lib/avdevice.lib"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/lib/avdevice.lib"
)

add_library(avfilter UNKNOWN IMPORTED GLOBAL)
set_target_properties(avfilter PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/lib/avfilter.lib"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/lib/avfilter.lib"
)

add_library(avformat UNKNOWN IMPORTED GLOBAL)
set_target_properties(avformat PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/lib/avformat.lib"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/lib/avformat.lib"
)

add_library(avutil UNKNOWN IMPORTED GLOBAL)
set_target_properties(avutil PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/lib/avutil.lib"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/lib/avutil.lib"
)

add_library(ffmpeg INTERFACE IMPORTED GLOBAL)
set_property(TARGET ffmpeg PROPERTY
  INTERFACE_LINK_LIBRARIES avcodec avdevice avfilter avformat avutil)
endif()